--- a/package.json
+++ b/package.json
@@ -100,6 +100,8 @@
     "mimic-response": "^1.0.1",
     "minimatch": "^3.0.4",
     "minimist": "^1.2.5",
+    "mongodb": "^4.1.2",
+    "mongoose": "^6.0.8",
     "ms": "^2.1.3",
     "negotiator": "^0.6.2",
     "nodemon": "^2.0.12",
