--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "anymatch": "^3.1.2",
     "array-flatten": "^1.1.1",
     "balanced-match": "^1.0.2",
+    "bcryptjs": "^2.4.3",
     "binary-extensions": "^2.2.0",
     "body-parser": "^1.19.0",
     "boxen": "^4.2.0",
@@ -32,12 +33,15 @@
     "color-name": "^1.1.4",
     "concat-map": "^0.0.1",
     "configstore": "^5.0.1",
+    "connect-flash": "^0.1.1",
+    "connect-mongodb-session": "^3.1.1",
     "content-disposition": "^0.5.3",
     "content-type": "^1.0.4",
     "cookie": "^0.4.0",
     "cookie-signature": "^1.0.6",
     "cors": "^2.8.5",
     "crypto-random-string": "^2.0.0",
+    "csurf": "^1.11.0",
     "debug": "^3.2.7",
     "decompress-response": "^3.3.0",
     "deep-extend": "^0.6.0",
@@ -55,6 +59,7 @@
     "escape-html": "^1.0.3",
     "etag": "^1.8.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "fill-range": "^7.0.1",
     "finalhandler": "^1.1.2",
     "forwarded": "^0.2.0",
@@ -105,6 +110,8 @@
     "mongoose": "^6.0.8",
     "ms": "^2.1.3",
     "negotiator": "^0.6.2",
+    "nodemailer": "^6.7.0",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^2.0.12",
     "nopt": "^1.0.10",
     "normalize-path": "^3.0.0",
