--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "depd": "^1.1.2",
     "destroy": "^1.0.4",
     "dot-prop": "^5.3.0",
+    "dotenv": "^10.0.0",
     "duplexer3": "^0.1.4",
     "ee-first": "^1.1.1",
     "ejs": "^3.1.6",
