--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "etag": "^1.8.1",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "express-validator": "^6.13.0",
     "fill-range": "^7.0.1",
     "finalhandler": "^1.1.2",
     "forwarded": "^0.2.0",
