--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "express-validator": "^6.13.0",
     "fill-range": "^7.0.1",
     "finalhandler": "^1.1.2",
+    "font-awesome": "^4.7.0",
     "forwarded": "^0.2.0",
     "fresh": "^0.5.2",
     "get-stream": "^4.1.0",
