--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "mongoose": "^6.0.8",
     "ms": "^2.1.3",
     "negotiator": "^0.6.2",
+    "node-fetch": "^2.6.1",
     "nodemailer": "^6.7.0",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^2.0.12",
